--- a/index.html
+++ b/index.html
@@ -15,6 +15,21 @@
   rel="stylesheet">
 </head>
 <body>
+  <header class="header">
+    <div class="container">
+      <div class="overlay"></div>
+      <a href="#">
+          <h1 class="logo">VON</h1>
+      </a>
+      <nav class="navabar">
+        <div class="navabar-top">
+          <a href="#" class="logo"> VON
+            <button class="nav-close-btn"></button>
+          </a>
+        </div>
+      </nav>
+    </div>
+  </header>
     <script src="app.js" charset="UTF-8"></script>
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
 <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
