--- a/index.html
+++ b/index.html
@@ -21,13 +21,41 @@
       <a href="#">
           <h1 class="logo">VON</h1>
       </a>
-      <nav class="navabar">
-        <div class="navabar-top">
+      <nav class="navbar">
+        <div class="navbar-top">
           <a href="#" class="logo"> VON
-            <button class="nav-close-btn"></button>
+            <button class="nav-close-btn" aria-label="Close Menu">
+              <ion-icon name="close-outline"></ion-icon>
+            </button>
           </a>
         </div>
+        <ul class="navbar-list">
+          <li class="navbar-item">
+            <a href="#home" class="navbar-link">Home</a>
+          </li>
+
+          <li class="navbar-item">
+            <a href="#about" class="navbar-link">About</a>
+          </li>
+
+          <li class="navbar-item">
+            <a href="#services" class="navbar-link">Services</a>
+          </li>
+
+          <li class="navbar-item">
+            <a href="#features" class="navbar-link">Features</a>
+          </li>
+
+          <li class="navbar-item">
+            <a href="#blog" class="navbar-link">Blog</a>
+          </li>
+          <li class="navbar-item">
+            <a href="#" class="navbar-link">Contact Us</a>
+          </li>
+        </ul>
       </nav>
+
+      
     </div>
   </header>
     <script src="app.js" charset="UTF-8"></script>
