--- a/index.html
+++ b/index.html
@@ -54,8 +54,13 @@
           </li>
         </ul>
       </nav>
-
-      
+      <a href="a" class="btn">
+        <ion-icon name="chevron-forward-outline" aria-hidden="true"></ion-icon>
+        <span>Get a Quote</span> 
+      </a>
+      <button  class="nav-open-btn" aria-label="Open-Menu">
+        <ion-icon name="menu-outline"></ion-icon>
+      </button>
     </div>
   </header>
     <script src="app.js" charset="UTF-8"></script>
