--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   rel="stylesheet">
 </head>
 <body>
-  <header class="header">
+  <header class="header  active">
     <div class="container">
       <div class="overlay"></div>
       <a href="#">
