--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
       <a href="#">
           <h1 class="logo">VON</h1>
       </a>
-      <nav class="navbar">
+      <nav class="navbar active">
         <div class="navbar-top">
-          <a href="#" class="logo"> VON
+          <a href="#" class="logo"> VON  </a>
             <button class="nav-close-btn" aria-label="Close Menu">
               <ion-icon name="close-outline"></ion-icon>
             </button>
-          </a>
         </div>
+
         <ul class="navbar-list">
           <li class="navbar-item">
             <a href="#home" class="navbar-link">Home</a>
@@ -49,20 +49,25 @@
           <li class="navbar-item">
             <a href="#blog" class="navbar-link">Blog</a>
           </li>
+          
           <li class="navbar-item">
             <a href="#" class="navbar-link">Contact Us</a>
           </li>
         </ul>
       </nav>
-      <a href="a" class="btn">
+
+
+      <a href="#" class="btn">
         <ion-icon name="chevron-forward-outline" aria-hidden="true"></ion-icon>
         <span>Get a Quote</span> 
       </a>
+
       <button  class="nav-open-btn" aria-label="Open-Menu">
         <ion-icon name="menu-outline"></ion-icon>
       </button>
     </div>
   </header>
+
     <script src="app.js" charset="UTF-8"></script>
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
 <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
