--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
       <a href="#">
           <h1 class="logo">VON</h1>
       </a>
-      <nav class="navbar active">
+      <nav class="navbar active" data-navbar>
         <div class="navbar-top">
           <a href="#" class="logo"> VON  </a>
-            <button class="nav-close-btn" aria-label="Close Menu">
+            <button class="nav-close-btn" aria-label="Close Menu" data-nav-close-btn>
               <ion-icon name="close-outline"></ion-icon>
             </button>
         </div>
@@ -62,7 +62,7 @@
         <span>Get a Quote</span> 
       </a>
 
-      <button  class="nav-open-btn" aria-label="Open-Menu">
+      <button  class="nav-open-btn" aria-label="Open-Menu" data-nav-open-btn>
         <ion-icon name="menu-outline"></ion-icon>
       </button>
     </div>
