added overlay function

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
   <header class="header  active">
     <div class="container">
-      <div class="overlay  active"></div>
+      <div class="overlay  active" data-overlay ></div>
       <a href="#">
           <h1 class="logo">VON</h1>
       </a>
