--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
 <body>
   <header class="header  active">
     <div class="container">
-      <div class="overlay  active" data-overlay ></div>
+      <div class="overlay" data-overlay ></div>
       <a href="#">
           <h1 class="logo">VON</h1>
       </a>
-      <nav class="navbar active" data-navbar>
+      <nav class="navbar" data-navbar>
         <div class="navbar-top">
           <a href="#" class="logo"> VON  </a>
             <button class="nav-close-btn" aria-label="Close Menu" data-nav-close-btn>
