--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TavelInc
     </title>
+
+    <!-- icon link -->
     <link rel="icon" href="./favicon.svg" type="image/svg">
+    
+    <!-- google font links -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -17,6 +21,9 @@
 <body>
 
     <script src="app.js" charset="UTF-8"></script>
+
+
+    <!-- scripts from style guide -->
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
 <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </body>
