--- a/index.html
+++ b/index.html
@@ -21,11 +21,13 @@
 
 
 <body>
+<header>
 
+
+</header>
     
 
     <script src="app.js" charset="UTF-8"></script>
-
 
     <!-- scripts from style guide -->
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
