--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
   </ul>
 
-  <a href="#" class="btn btn-outline">Booking Now</a>
+  <a href="#" class="btn btn-secondary">Booking Now</a>
 
 </nav>
 
