testing new header

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 <body>
 
-<header class="header" data-header>
+<header class="header">
 <div class="container">
 <a href="#">
   <h1 class="logo">TravelBuddy</h1>
