--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TavelInc
+    <title>TravelBuddy
     </title>
 
     <!-- icon link -->
@@ -24,10 +24,10 @@
   <header class="header">
     <div class="container">
       <a href="#">
-        <h1 class="logo">Tourest</h1>
+        <h1 class="logo">TravelBuddy</h1>
       </a>
 
-      <button class="nav-toggle-btn" data-nav-toggle-btn aria-label="Toggle Menu">
+      <button class="nav-toggle-btn">
         <ion-icon name="menu-outline" class="open"></ion-icon>
         <ion-icon name="close-outline" class="close"></ion-icon>
       </button>
