--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 
 <body>
-  <header class="header">
+  <header class="header" data-header="">
     <div class="container">
       <a href="#">
         <h1 class="logo">TravelBuddy</h1>
