added article to project

--- a/index.html
+++ b/index.html
@@ -71,7 +71,9 @@
     <main>
       <!-- ARTICLE -->
 
-      
+      <article>
+        
+      </article>
     </main>
 
     <script src="app.js" charset="UTF-8"></script>
