--- a/index.html
+++ b/index.html
@@ -72,7 +72,8 @@
       <!-- ARTICLE -->
 
       <article>
-        
+        <section class="section hero"
+        style="background-image: url('./assets/images/hero-bg-bottom.png') url('./assets/images/hero-bg-top.png')">
       </article>
     </main>
 
