added container div

--- a/index.html
+++ b/index.html
@@ -74,6 +74,11 @@
       <article>
         <section class="section hero"
         style="background-image: url('./assets/images/hero-bg-bottom.png') url('./assets/images/hero-bg-top.png')">
+      
+        <div class="section hero">
+
+        </div>
+      
       </article>
     </main>
 
