--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <section class="section hero"
         style="background-image: url('./assets/images/hero-bg-bottom.png') url('./assets/images/hero-bg-top.png')">
       
-        <div class="section hero">
+        <div class="container">
 
         </div>
       
