added intial section tag

--- a/index.html
+++ b/index.html
@@ -107,7 +107,10 @@
       </section>
 
       <!-- DESTINATIONS -->
+      <section class="section destination">
 
+
+      </section>
       
       </article>
     </main>
