--- a/index.html
+++ b/index.html
@@ -108,8 +108,11 @@
 
       <!-- DESTINATIONS -->
       <section class="section destination">
+        <div class="container">
 
 
+        </div>
+        
       </section>
       
       </article>
