added p tags and ul

--- a/index.html
+++ b/index.html
@@ -109,8 +109,14 @@
       <!-- DESTINATIONS -->
       <section class="section destination">
         <div class="container">
+          <p class="section-subtitle">Destinations</p>
+
+          <h2 class="h2 section-title">Choose Your Place</h2>
+
+          <ul class="destination-list">
 
 
+          </ul>
         </div>
         
       </section>
