added 1st destination banner

--- a/index.html
+++ b/index.html
@@ -114,8 +114,21 @@
           <h2 class="h2 section-title">Choose Your Place</h2>
 
           <ul class="destination-list">
+            <li class="w-50">
+              <a href="#" class="destination-card">
 
+                <figure class="card-banner">
+                  <img src="./assets/images/destination-1.jpg" width="1140" height="1100" loading="lazy"
+                    alt="Malé, Maldives" class="img-cover">
+                </figure>
 
+                <div class="card-content">
+                  <p class="card-subtitle">Malé</p>
+
+                  <h3 class="h3 card-title">Maldives</h3>
+                </div>
+              </a>
+            </li>
           </ul>
         </div>
         
