added 3rd destination card

--- a/index.html
+++ b/index.html
@@ -145,7 +145,22 @@
 
               </a>
             </li>
+            <li>
+              <a href="#" class="destination-card">
 
+                <figure class="card-banner">
+                  <img src="./assets/images/destination-3.jpg" width="1110" height="480" loading="lazy"
+                    alt="Kuala Lumpur, Malaysia" class="img-cover">
+                </figure>
+
+                <div class="card-content">
+                  <p class="card-subtitle">Kuala Lumpur</p>
+
+                  <h3 class="h3 card-title">Malaysia</h3>
+                </div>
+
+              </a>
+            </li>
 
           </ul>
         </div>
