added popular section

--- a/index.html
+++ b/index.html
@@ -198,9 +198,14 @@
 
           </ul>
         </div>
-        
       </section>
       
+
+      <!-- POPULAR DESTIINATION SECTION -->
+      <section class="section popular">
+
+      </section>
+
       </article>
     </main>
 
