initial about section

--- a/index.html
+++ b/index.html
@@ -341,6 +341,11 @@
         </div>
 
       </section>
+      
+      <!-- ABOUT US -->
+      <section class="section about">
+
+      </section>
 
       </article>
     </main>
