--- a/index.html
+++ b/index.html
@@ -346,7 +346,35 @@
       <section class="section about">
 
       </section>
+      <div class="container">
+        <div class="about-content">
+          <p class="section-subtitle">About Us</p>
+          <h2 class="h2 section-title">Explore all tour of the world with us.</h2>
+          <p class="about-text">
+            Lorem available, but the majority have suffered alteration in some form, by injected humour, or
+            randomised words
+            which don't look even slightly believable.
+          </p>
+          <ul class="about-list">
+            <li class="about-item">
 
+              <div class="about-item-icon">
+                <ion-icon name="compass"></ion-icon>
+              </div>
+
+              <div class="about-item-content">
+                <h3 class="h3 about-item-title">Tour guide</h3>
+
+                <p class="about-item-text">
+                  Lorem Ipsum available, but the majority have suffered alteration in some.
+                </p>
+              </div>
+
+            </li>
+            
+          </ul>
+        </div>
+      </div>
       </article>
     </main>
 
