--- a/index.html
+++ b/index.html
@@ -371,6 +371,21 @@
               </div>
 
             </li>
+            <li class="about-item">
+
+              <div class="about-item-icon">
+                <ion-icon name="briefcase"></ion-icon>
+              </div>
+
+              <div class="about-item-content">
+                <h3 class="h3 about-item-title">Friendly price</h3>
+
+                <p class="about-item-text">
+                  Lorem Ipsum available, but the majority have suffered alteration in some.
+                </p>
+              </div>
+
+            </li>
             
           </ul>
         </div>
