--- a/index.html
+++ b/index.html
@@ -386,7 +386,21 @@
               </div>
 
             </li>
-            
+            <li class="about-item">
+
+              <div class="about-item-icon">
+                <ion-icon name="umbrella"></ion-icon>
+              </div>
+
+              <div class="about-item-content">
+                <h3 class="h3 about-item-title">Reliable tour</h3>
+
+                <p class="about-item-text">
+                  Lorem Ipsum available, but the majority have suffered alteration in some.
+                </p>
+              </div>
+
+            </li>
           </ul>
         </div>
       </div>
