initial about styling

--- a/index.html
+++ b/index.html
@@ -402,6 +402,8 @@
 
             </li>
           </ul>
+          <a href="#" class="btn btn-primary">Booking Now</a>
+
         </div>
       </div>
       </article>
