added missing image

--- a/index.html
+++ b/index.html
@@ -407,13 +407,16 @@
           <a href="#" class="btn btn-primary">Booking Now</a>
 
           </div>
+          <figure class="about-banner">
+            <img src="./assets/images/about-banner.png" width="756" height="842" loading="lazy" alt="" class="w-100">
+          </figure>
         </div>
 
       </section>
 
         <!-- BLOG SECTION -->
 
-      <section>
+      <section class="section blog">
 
       </section>
 
