--- a/index.html
+++ b/index.html
@@ -596,6 +596,14 @@
       </article>
     </main>
 
+
+    <!-- FOOTER -->
+    <footer class="">
+
+
+    </footer>
+
+
     <script src="app.js" charset="UTF-8"></script>
 
     <!-- scripts from style guide -->
