--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </head>
 
 
-<body>
+<body id="top">
   <header class="header" data-header="">
     <div class="container">
       <a href="#">
@@ -740,6 +740,11 @@
 
 
     </footer>
+
+    <!-- SCROLL TO THE TOP -->
+    <a href="#top" class="go-top" data-go-top aria-label="Go To Top">
+      <ion-icon name="chevron-up-outline"></ion-icon>
+    </a>
 
 
     <script src="app.js" charset="UTF-8"></script>
