--- a/index.html
+++ b/index.html
@@ -697,10 +697,10 @@
         </div>
 
         <div class="footer-bottom">
-          <a href="#" class="logo">Tourest</a>
+          <a href="#" class="logo">TravelBuddy</a>
 
         <p class="copyright">
-          &copy; 2022 <a href="#" class="copyright-link">codewithsadee</a>. All Rights Reserved
+          &copy; 2023 <a href="#" class="copyright-link"></a>. All Rights Reserved
         </p>
 
         <ul class="social-list">
